                             script fixes.
                           Install script now always uses "make" and not
                             "gmake".
                           IDEA detection is fixed on systems that provide
                             the header files but then turn out to not
                             have the required functions upon linking.
                           Install now properly identifies system-wide
                             installations of pcre and/or zlib if they
                             are installed in /usr/local/.
                           Mixmaster will now ensure that an address
                             submitted in a blocking request does not
                             match that of a known remailer before
                             adding it to the dest.blk file (patch
                             submitted by Trek. Vulnerability originally
                             discovered by noise and rabbi.)
                           Minor documentation fixes.

2002-12-16      2.9b42     Minor documentation fixes.
                           Clarified log message wording.
                           Append another newline character to mbox folders
                             when storing a mail so that the mandatory empty
                             line is there.

2002-12-16      2.9.0rc1   Release candidate. Packaging changes only.

2002-12-25      2.9.0      Release version. Minor documentation changes
                             and version number change only.

2003-06-01      2.9.0.1    Several changes for the Windows build.
                           Some Install script fixes.
                           Fixed a problem in blockrequest() where a buffer
                             could have been used after it was free()'d which
                             resulted in segfaults.

2003-xx-xx      xxxxxx     Windows build changes.